added more pages

--- a/Jira.Web/Views/Shared/_Layout.cshtml
+++ b/Jira.Web/Views/Shared/_Layout.cshtml
@@ -5,10 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>:: My-Task:: Task </title>
+    <title>:: My-Task:: Projects </title>
     <link rel="icon" href="favicon.ico" type="image/x-icon"> <!-- Favicon-->
-    <!-- plugin css file  -->
-    <link rel="stylesheet" href="~/assets/plugin/nestable/jquery-nestable.css" />
     <!-- project css file  -->
     <link rel="stylesheet" href="~/assets/css/my-task.style.min.css">
 </head>
@@ -47,8 +45,8 @@
                         </a>
                         <!-- Menu: Sub menu ul -->
                         <ul class="sub-menu collapse show" id="project-Components">
-                            <li><a class="ms-link" href="projects.html"><span>Projects</span></a></li>
-                            <li><a class="ms-link active" href="task.html"><span>Tasks</span></a></li>
+                            <li><a class="ms-link active" href="projects.html"><span>Projects</span></a></li>
+                            <li><a class="ms-link" href="task.html"><span>Tasks</span></a></li>
                             <li><a class="ms-link" href="timesheet.html"><span>Timesheet</span></a></li>
                             <li><a class="ms-link" href="team-leader.html"><span>Leaders</span></a></li>
                         </ul>
@@ -224,7 +222,7 @@
                                                     </li>
                                                     <li class="py-2 mb-1 border-bottom">
                                                         <a href="javascript:void(0);" class="d-flex">
-                                                            <img class="avatar rounded-circle" src="~/assets/images/xs/avatar3.jpg" alt="">
+                                                            <img class="avatar rounded-circle sm" src="~/assets/images/xs/avatar3.jpg" alt="">
                                                             <div class="flex-fill ms-2">
                                                                 <p class="d-flex justify-content-between mb-0 "><span class="font-weight-bold">Andrea Gill</span> <small>1HR</small></p>
                                                                 <span class="">Quality Assurance Task Completed</span>
@@ -233,7 +231,7 @@
                                                     </li>
                                                     <li class="py-2 mb-1 border-bottom">
                                                         <a href="javascript:void(0);" class="d-flex">
-                                                            <img class="avatar rounded-circle" src="~/assets/images/xs/avatar5.jpg" alt="">
+                                                            <img class="avatar rounded-circle sm" src="~/assets/images/xs/avatar5.jpg" alt="">
                                                             <div class="flex-fill ms-2">
                                                                 <p class="d-flex justify-content-between mb-0 "><span class="font-weight-bold">Diane Fisher</span> <small>13MIN</small></p>
                                                                 <span class="">Add New Project for App Developemnt</span>
@@ -242,7 +240,7 @@
                                                     </li>
                                                     <li class="py-2 mb-1 border-bottom">
                                                         <a href="javascript:void(0);" class="d-flex">
-                                                            <img class="avatar rounded-circle" src="~/assets/images/xs/avatar6.jpg" alt="">
+                                                            <img class="avatar rounded-circle sm" src="~/assets/images/xs/avatar6.jpg" alt="">
                                                             <div class="flex-fill ms-2">
                                                                 <p class="d-flex justify-content-between mb-0 "><span class="font-weight-bold">Andrea Gill</span> <small>1HR</small></p>
                                                                 <span class="">Add Timesheet For Rhinestone project</span>
@@ -251,7 +249,7 @@
                                                     </li>
                                                     <li class="py-2">
                                                         <a href="javascript:void(0);" class="d-flex">
-                                                            <img class="avatar rounded-circle" src="~/assets/images/xs/avatar7.jpg" alt="">
+                                                            <img class="avatar rounded-circle sm" src="~/assets/images/xs/avatar7.jpg" alt="">
                                                             <div class="flex-fill ms-2">
                                                                 <p class="d-flex justify-content-between mb-0 "><span class="font-weight-bold">Zoe Wright</span> <small class="">1DAY</small></p>
                                                                 <span class="">Add Calander Event</span>
@@ -277,7 +275,7 @@
                                     <div class="card border-0 w280">
                                         <div class="card-body pb-0">
                                             <div class="d-flex py-1">
-                                                <img class="avatar rounded-circle" src="~/assets/images/profile_av.png" alt="profile">
+                                                <img class="avatar rounded-circle sm" src="~/assets/images/profile_av.png" alt="profile">
                                                 <div class="flex-fill ms-3">
                                                     <p class="mb-0"><span class="font-weight-bold">Dylan Hunter</span></p>
                                                     <small class="">Dylan.hunter@gmail.com</small>
