made dashboard responsive

--- a/Jira.Web/Views/Issue/Dashboard.cshtml
+++ b/Jira.Web/Views/Issue/Dashboard.cshtml
@@ -188,7 +188,7 @@
                                 <td><a href="projects.html">Social Geek Made</a></td>
                                 <td>10-01-2021</td>
                                 <td>4 Month</td>
-                                <td><img src="assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Keith</a></td>
+                                <td><img src="~/assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Keith</a></td>
                                 <td>
                                     <div class="progress">
                                         <div class="progress-bar bg-primary" role="progressbar" aria-valuenow="92" aria-valuemin="0" aria-valuemax="100" style="width: 78%;">78%</div>
@@ -200,7 +200,7 @@
                                 <td><a href="projects.html">Practice to Perfect</a></td>
                                 <td>12-02-2021</td>
                                 <td>1 Month</td>
-                                <td><img src="assets/images/xs/avatar2.jpg" alt="Avatar" class="avatar sm rounded-circle me-2"><a href="#">Colin</a></td>
+                                <td><img src="~/assets/images/xs/avatar2.jpg" alt="Avatar" class="avatar sm rounded-circle me-2"><a href="#">Colin</a></td>
                                 <td>
                                     <div class="progress">
                                         <div class="progress-bar  bg-primary" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">80%</div>
@@ -224,7 +224,7 @@
                                 <td><a href="projects.html">Box of Crayons</a></td>
                                 <td>23-02-2021</td>
                                 <td>1 Month</td>
-                                <td><img src="assets/images/xs/avatar4.jpg" alt="Avatar" class="avatar sm rounded-circle me-2"><a href="#">Peter</a></td>
+                                <td><img src="~/assets/images/xs/avatar4.jpg" alt="Avatar" class="avatar sm rounded-circle me-2"><a href="#">Peter</a></td>
                                 <td>
                                     <div class="progress">
                                         <div class="progress-bar  bg-primary" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;">85%</div>
@@ -236,7 +236,7 @@
                                 <td><a href="projects.html">Gob Geeklords</a></td>
                                 <td>16-03-2021</td>
                                 <td>10 Month</td>
-                                <td><img src="assets/images/xs/avatar5.jpg" alt="Avatar" class="avatar sm rounded-circle me-2"><a href="#">Evan</a></td>
+                                <td><img src="~/assets/images/xs/avatar5.jpg" alt="Avatar" class="avatar sm rounded-circle me-2"><a href="#">Evan</a></td>
                                 <td>
                                     <div class="progress">
                                         <div class="progress-bar  bg-primary" role="progressbar" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100" style="width: 65%;">65%</div>
@@ -248,7 +248,7 @@
                                 <td><a href="projects.html">Java Dalia</a></td>
                                 <td>17-03-2021</td>
                                 <td>8 Month</td>
-                                <td><img src="assets/images/xs/avatar6.jpg" alt="Avatar" class="avatar sm rounded-circle me-2"><a href="#">Connor</a></td>
+                                <td><img src="~/assets/images/xs/avatar6.jpg" alt="Avatar" class="avatar sm rounded-circle me-2"><a href="#">Connor</a></td>
                                 <td>
                                     <div class="progress">
                                         <div class="progress-bar  bg-primary" role="progressbar" aria-valuenow="48" aria-valuemin="0" aria-valuemax="100" style="width: 48%;">48%</div>
@@ -260,7 +260,7 @@
                                 <td><a href="projects.html">Fast Cad</a></td>
                                 <td>14-04-2021</td>
                                 <td>2 Month</td>
-                                <td><img src="assets/images/xs/avatar7.jpg" alt="Avatar" class="avatar sm rounded-circle me-2"><a href="#">Benjamin</a></td>
+                                <td><img src="~/assets/images/xs/avatar7.jpg" alt="Avatar" class="avatar sm rounded-circle me-2"><a href="#">Benjamin</a></td>
                                 <td>
                                     <div class="progress">
                                         <div class="progress-bar  bg-primary" role="progressbar" aria-valuenow="76" aria-valuemin="0" aria-valuemax="100" style="width: 76%;">76%</div>
