added login/signup pages

--- a/Jira.Web/Views/User/Login.cshtml
+++ b/Jira.Web/Views/User/Login.cshtml
@@ -104,7 +104,7 @@
     </div>
 
     <!-- Jquery Core Js -->
-    <script src="~/assets/assets/bundles/libscripts.bundle.js"></script>
+    <script src="./assets/bundles/libscripts.bundle.js"></script>
 
 </body>
 </html>
