--- a/Jira.Web/Views/User/Signup.cshtml
+++ b/Jira.Web/Views/User/Signup.cshtml
@@ -108,7 +108,7 @@
     </div>
 
     <!-- Jquery Core Js -->
-    <script src="../assets/bundles/libscripts.bundle.js"></script>
+    <script src="./assets/bundles/libscripts.bundle.js"></script>
 
 </body>
 </html>
