Made changes to createIssue page

--- a/Jira.Web/Views/Issue/CreateIssue.cshtml
+++ b/Jira.Web/Views/Issue/CreateIssue.cshtml
@@ -122,7 +122,7 @@
                             <td>Jan 12, 2022</td>
                             <td>Jan 23, 2022</td>
                         </tr><tr>
-                            <td>***</td>
+                            <td><img src="~/assets/images/task.svg" alt="task" class="avatar sm  rounded-circle me-2"></td>
                             <td>TEAM-573</td>
                             <td><a href="projects.html">Worked on NRA API</a></td>
                             <td><img src="~/assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Yosi</a></td>
