Added employee page and modifies createIssue page

--- a/Jira.Web/Views/Issue/CreateIssue.cshtml
+++ b/Jira.Web/Views/Issue/CreateIssue.cshtml
@@ -24,7 +24,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>***</td>
+                            <td><img src="~/assets/images/bug.svg" alt="bug" class="avatar sm  rounded-circle me-2"></td>
                             <td>TEAM-573</td>
                             <td><a href="projects.html">Worked on NRA API</a></td>
                             <td><img src="~/assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Yosi</a></td>
@@ -35,7 +35,7 @@
                             <td>Oct 13, 2022</td>
                         </tr>
                         <tr>
-                            <td>***</td>
+                            <td><img src="~/assets/images/bug.svg" alt="bug" class="avatar sm  rounded-circle me-2"></td>
                             <td>TEAM-356</td>
                             <td><a href="projects.html">Fire a mail</a></td>
                             <td><img src="~/assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Rasheed</a></td>
@@ -46,7 +46,7 @@
                             <td>Sept 13, 2022</td>
                         </tr>
                         <tr>
-                            <td>***</td>
+                            <td><img src="~/assets/images/story.svg" alt="story" class="avatar sm  rounded-circle me-2"></td>
                             <td>TEAM-674</td>
                             <td><a href="projects.html">Worked on my project</a></td>
                             <td><img src="~/assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Leo</a></td>
@@ -56,7 +56,7 @@
                             <td>Sept 12, 2022</td>
                             <td>Sept 13, 2022</td>
                         </tr><tr>
-                            <td>***</td>
+                            <td><img src="~/assets/images/story.svg" alt="story" class="avatar sm  rounded-circle me-2"></td>
                             <td>TEAM-573</td>
                             <td><a href="projects.html">Worked on NRA API</a></td>
                             <td><img src="~/assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Yosi</a></td>
@@ -68,7 +68,7 @@
                             <td>Oct 13, 2022</td>
                         </tr>
                         <tr>
-                            <td>***</td>
+                            <td><img src="~/assets/images/bug.svg" alt="bug" class="avatar sm  rounded-circle me-2"></td>
                             <td>TEAM-356</td>
                             <td><a href="projects.html">Fire a mail</a></td>
                             <td><img src="~/assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Rasheed</a></td>
@@ -79,7 +79,7 @@
                             <td>Sept 13, 2022</td>
                         </tr>
                         <tr>
-                            <td>***</td>
+                            <td><img src="~/assets/images/story.svg" alt="story" class="avatar sm  rounded-circle me-2"></td>
                             <td>TEAM-674</td>
                             <td><a href="projects.html">Worked on my project</a></td>
                             <td><img src="~/assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Leo</a></td>
@@ -89,7 +89,7 @@
                             <td>Sept 12, 2022</td>
                             <td>Sept 13, 2022</td>
                         </tr><tr>
-                            <td>***</td>
+                            <td><img src="~/assets/images/story.svg" alt="story" class="avatar sm  rounded-circle me-2"></td>
                             <td>TEAM-573</td>
                             <td><a href="projects.html">Worked on NRA API</a></td>
                             <td><img src="~/assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Yosi</a></td>
@@ -101,7 +101,7 @@
                             <td>Jul 17, 2022</td>
                         </tr>
                         <tr>
-                            <td>***</td>
+                            <td><img src="~/assets/images/bug.svg" alt="bug" class="avatar sm  rounded-circle me-2"></td>
                             <td>TEAM-356</td>
                             <td><a href="projects.html">Fire a mail</a></td>
                             <td><img src="~/assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Rasheed</a></td>
@@ -112,7 +112,7 @@
                             <td>Feb 13, 2022</td>
                         </tr>
                         <tr>
-                            <td>***</td>
+                            <td><img src="~/assets/images/story.svg" alt="story" class="avatar sm  rounded-circle me-2"></td>
                             <td>TEAM-674</td>
                             <td><a href="projects.html">Worked on my project</a></td>
                             <td><img src="~/assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Leo</a></td>
@@ -134,7 +134,7 @@
                             <td>Aug 13, 2022</td>
                         </tr>
                         <tr>
-                            <td>***</td>
+                            <td><img src="~/assets/images/bug.svg" alt="bug" class="avatar sm  rounded-circle me-2"></td>
                             <td>TEAM-356</td>
                             <td><a href="projects.html">Fire a mail</a></td>
                             <td><img src="~/assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Rasheed</a></td>
@@ -145,7 +145,7 @@
                             <td>Sept 30, 2022</td>
                         </tr>
                         <tr>
-                            <td>***</td>
+                            <td><img src="~/assets/images/task.svg" alt="task" class="avatar sm  rounded-circle me-2"></td>
                             <td>TEAM-674</td>
                             <td><a href="projects.html">Worked on my project</a></td>
                             <td><img src="~/assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Leo</a></td>
