changed astericks to icons on issue page

--- a/Jira.Web/Views/Issue/CreateIssue.cshtml
+++ b/Jira.Web/Views/Issue/CreateIssue.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="row g-3 mb-3 row-deck">
+﻿<script src="~/assets/js/task.js"></script>
+<script src="~/assets/js/template.js"></script>
+<div class="row g-3 mb-3 row-deck">
     <div class="col-md-12">
         <div class="card mb-3">
             <div class="card-header py-3 d-flex justify-content-between align-items-center">
@@ -24,7 +26,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>***</td>
+                            <td><img src="~/assets/images/bug.svg" alt="bug" class="avatar sm  rounded-circle me-2"></td>
                             <td>TEAM-573</td>
                             <td><a href="projects.html">Worked on NRA API</a></td>
                             <td><img src="~/assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Yosi</a></td>
@@ -35,7 +37,7 @@
                             <td>Oct 13, 2022</td>
                         </tr>
                         <tr>
-                            <td>***</td>
+                            <td><img src="~/assets/images/bug.svg" alt="bug" class="avatar sm  rounded-circle me-2"></td>
                             <td>TEAM-356</td>
                             <td><a href="projects.html">Fire a mail</a></td>
                             <td><img src="~/assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Rasheed</a></td>
@@ -46,7 +48,7 @@
                             <td>Sept 13, 2022</td>
                         </tr>
                         <tr>
-                            <td>***</td>
+                            <td><img src="~/assets/images/story.svg" alt="story" class="avatar sm  rounded-circle me-2"></td>
                             <td>TEAM-674</td>
                             <td><a href="projects.html">Worked on my project</a></td>
                             <td><img src="~/assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Leo</a></td>
@@ -55,8 +57,9 @@
                             <td><span class="badge bg-danger">IN-PROGRESS</span></td>
                             <td>Sept 12, 2022</td>
                             <td>Sept 13, 2022</td>
-                        </tr><tr>
-                            <td>***</td>
+                        </tr>
+                        <tr>
+                            <td><img src="~/assets/images/story.svg" alt="story" class="avatar sm  rounded-circle me-2"></td>
                             <td>TEAM-573</td>
                             <td><a href="projects.html">Worked on NRA API</a></td>
                             <td><img src="~/assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Yosi</a></td>
@@ -68,7 +71,7 @@
                             <td>Oct 13, 2022</td>
                         </tr>
                         <tr>
-                            <td>***</td>
+                            <td><img src="~/assets/images/bug.svg" alt="bug" class="avatar sm  rounded-circle me-2"></td>
                             <td>TEAM-356</td>
                             <td><a href="projects.html">Fire a mail</a></td>
                             <td><img src="~/assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Rasheed</a></td>
@@ -79,7 +82,7 @@
                             <td>Sept 13, 2022</td>
                         </tr>
                         <tr>
-                            <td>***</td>
+                            <td><img src="~/assets/images/story.svg" alt="story" class="avatar sm  rounded-circle me-2"></td>
                             <td>TEAM-674</td>
                             <td><a href="projects.html">Worked on my project</a></td>
                             <td><img src="~/assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Leo</a></td>
@@ -88,8 +91,9 @@
                             <td><span class="badge bg-danger">IN-PROGRESS</span></td>
                             <td>Sept 12, 2022</td>
                             <td>Sept 13, 2022</td>
-                        </tr><tr>
-                            <td>***</td>
+                        </tr>
+                        <tr>
+                            <td><img src="~/assets/images/story.svg" alt="story" class="avatar sm  rounded-circle me-2"></td>
                             <td>TEAM-573</td>
                             <td><a href="projects.html">Worked on NRA API</a></td>
                             <td><img src="~/assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Yosi</a></td>
@@ -101,7 +105,7 @@
                             <td>Jul 17, 2022</td>
                         </tr>
                         <tr>
-                            <td>***</td>
+                            <td><img src="~/assets/images/bug.svg" alt="bug" class="avatar sm  rounded-circle me-2"></td>
                             <td>TEAM-356</td>
                             <td><a href="projects.html">Fire a mail</a></td>
                             <td><img src="~/assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Rasheed</a></td>
@@ -112,7 +116,7 @@
                             <td>Feb 13, 2022</td>
                         </tr>
                         <tr>
-                            <td>***</td>
+                            <td><img src="~/assets/images/story.svg" alt="story" class="avatar sm  rounded-circle me-2"></td>
                             <td>TEAM-674</td>
                             <td><a href="projects.html">Worked on my project</a></td>
                             <td><img src="~/assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Leo</a></td>
@@ -121,8 +125,9 @@
                             <td><span class="badge bg-danger">IN-PROGRESS</span></td>
                             <td>Jan 12, 2022</td>
                             <td>Jan 23, 2022</td>
-                        </tr><tr>
-                            <td>***</td>
+                        </tr>
+                        <tr>
+                            <td><img src="~/assets/images/task.svg" alt="task" class="avatar sm  rounded-circle me-2"></td>
                             <td>TEAM-573</td>
                             <td><a href="projects.html">Worked on NRA API</a></td>
                             <td><img src="~/assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Yosi</a></td>
@@ -134,7 +139,7 @@
                             <td>Aug 13, 2022</td>
                         </tr>
                         <tr>
-                            <td>***</td>
+                            <td><img src="~/assets/images/bug.svg" alt="bug" class="avatar sm  rounded-circle me-2"></td>
                             <td>TEAM-356</td>
                             <td><a href="projects.html">Fire a mail</a></td>
                             <td><img src="~/assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Rasheed</a></td>
@@ -145,7 +150,7 @@
                             <td>Sept 30, 2022</td>
                         </tr>
                         <tr>
-                            <td>***</td>
+                            <td><img src="~/assets/images/task.svg" alt="task" class="avatar sm  rounded-circle me-2"></td>
                             <td>TEAM-674</td>
                             <td><a href="projects.html">Worked on my project</a></td>
                             <td><img src="~/assets/images/xs/avatar1.jpg" alt="Avatar" class="avatar sm  rounded-circle me-2"><a href="#">Leo</a></td>
@@ -155,7 +160,7 @@
                             <td>Sept 20, 2022</td>
                             <td>Sept 23, 2022</td>
                         </tr>
-                        
+
                     </tbody>
                 </table>
             </div>
@@ -190,7 +195,7 @@
                         <option value="2" style="font-size: .8rem;">Bug</option>
                         <option value="3" style="font-size: .8rem;">Task</option>
                         <option value="3" style="font-size: .8rem;">Epic</option>
-                  
+
                     </select>
                 </div>
                 <div class="mb-3">
@@ -199,14 +204,14 @@
                         <option value="1" style="font-size: .8rem;">TO-DO</option>
                         <option value="2" style="font-size: .8rem; color: blue">IN PROGRESS</option>
                         <option value="3" style="font-size: .8rem; color: green;">DONE</option>
-          
+
                     </select>
                 </div> <div class="mb-3">
                     <label class="form-label" style="font-size: .8rem; font-weight: 600;">Summary </label>
-                      <input / style="width: 100%; height: 50px;">
+                    <input / style="width: 100%; height: 50px;">
                 </div>
-                
-               
+
+
                 <div class="row g-3 mb-3">
                     <div class="col-sm">
                         <label class="form-label">Assignee</label>
