made sidebar responsive

--- a/Jira.Web/Views/Shared/_Layout.cshtml
+++ b/Jira.Web/Views/Shared/_Layout.cshtml
@@ -587,8 +587,8 @@
     <script src="~/assets/bundles/nestable.bundle.js"></script>
 
     <!-- Jquery Page Js -->
-    <script src="./assets/js/template.js"></script>
-    <script src="./assets/js/task.js"></script>
+    <script src="~/assets/js/template.js"></script>
+    <script src="~/assets/js/task.js"></script>
 
 </body>
 </html>
