Adjusted Sidebar routing

--- a/Jira.Web/Views/Shared/_Layout.cshtml
+++ b/Jira.Web/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                 <!-- Menu: main ul -->
                 <ul class="menu-list flex-grow-1 mt-3">
                     <li class="collapsed">
-                        <a class="m-link" data-bs-toggle="collapse" data-bs-target="#dashboard-Components" href="#">
+                        <a class="m-link" data-bs-toggle="collapse" data-bs-target="#dashboard-Components" href="Dashboard.cshtml">
                             <i class="icofont-home fs-5"></i> <span>Dashboard</span> 
                             @*<span class="arrow icofont-dotted-down ms-auto text-end fs-5"></span>*@
                         </a>
@@ -51,7 +51,7 @@
                     </li>
 
                     <li class="collapsed">
-                        <a class="m-link" data-bs-toggle="collapse" data-bs-target="#tikit-Components" href="#">
+                        <a class="m-link" data-bs-toggle="collapse" data-bs-target="#tikit-Components" href="Index.cshtml">
                             <i class="icofont-tasks"></i> <span>Tasks</span> 
                             @*<span class="arrow icofont-dotted-down ms-auto text-end fs-5"></span>*@
                         </a>
@@ -62,7 +62,7 @@
                         </ul>*@
                     </li>
                     <li class="collapsed">
-                        <a class="m-link" data-bs-toggle="collapse" data-bs-target="#client-Components" href="#">
+                        <a class="m-link" data-bs-toggle="collapse" data-bs-target="#client-Components" href="CreateIssues.cshtml">
                             <i class="icofont-list"></i> <span>Issues</span> 
                             <span class="arrow icofont-dotted-down ms-auto text-end fs-5" style="color: #3D4756;"></span>
                         </a>
@@ -80,7 +80,7 @@
                         </ul>
                     </li>
                     <li class="collapsed">
-                        <a class="m-link" data-bs-toggle="collapse" data-bs-target="#emp-Components" href="#">
+                        <a class="m-link" data-bs-toggle="collapse" data-bs-target="#emp-Components" href="Employee.cshtml">
                             <i class="icofont-users-alt-5"></i> <span>Employees</span> 
                             @*<span class="arrow icofont-dotted-down ms-auto text-end fs-5" style="color: #3D4756; "></span>*@
                         </a>
