sidebar nav link fixed

--- a/Jira.Web/Views/Shared/_Layout.cshtml
+++ b/Jira.Web/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                 <!-- Menu: main ul -->
                 <ul class="menu-list flex-grow-1 mt-3">
                     <li class="collapsed">
-                        <a class="m-link" data-bs-toggle="collapse" data-bs-target="#dashboard-Components" href="Dashboard.cshtml">
+                        <a class="m-link" href="/issue/Dashboard">
                             <i class="icofont-home fs-5"></i> <span>Dashboard</span> 
                             @*<span class="arrow icofont-dotted-down ms-auto text-end fs-5"></span>*@
                         </a>
@@ -37,7 +37,7 @@
                         </ul>*@
                     </li>
                     <li class="collapsed">
-                        <a class="m-link active" data-bs-toggle="collapse" data-bs-target="#project-Components" href="#">
+                        <a class="m-link active" href="/Issue/Project">
                             <i class="icofont-briefcase"></i><span>Projects</span> 
                             @*<span class="arrow icofont-dotted-down ms-auto text-end fs-5"></span>*@
                         </a>
@@ -51,7 +51,7 @@
                     </li>
 
                     <li class="collapsed">
-                        <a class="m-link" data-bs-toggle="collapse" data-bs-target="#tikit-Components" href="Index.cshtml">
+                        <a class="m-link" href="/issue/index">
                             <i class="icofont-tasks"></i> <span>Tasks</span> 
                             @*<span class="arrow icofont-dotted-down ms-auto text-end fs-5"></span>*@
                         </a>
@@ -62,13 +62,13 @@
                         </ul>*@
                     </li>
                     <li class="collapsed">
-                        <a class="m-link" data-bs-toggle="collapse" data-bs-target="#client-Components" href="CreateIssues.cshtml">
+                        <a class="m-link" data-bs-toggle="collapse" data-bs-target="#client-Components">
                             <i class="icofont-list"></i> <span>Issues</span> 
                             <span class="arrow icofont-dotted-down ms-auto text-end fs-5" style="color: #3D4756;"></span>
                         </a>
                         <!-- Menu: Sub menu ul -->
                         <ul class="sub-menu collapse" id="client-Components">
-                            <li><a class="ms-link" href="ourclients.html"> <span>All issues</span></a></li>
+                            <li><a class="ms-link" href="/issue/createIssue"> <span>All issues</span></a></li>
                             <li><a class="ms-link" href="profile.html"> <span>My open issues</span></a></li>
                             <li><a class="ms-link" href="profile.html"> <span>Reported by me</span></a></li>
                             <li><a class="ms-link" href="profile.html"> <span>Open issues</span></a></li>
@@ -80,7 +80,7 @@
                         </ul>
                     </li>
                     <li class="collapsed">
-                        <a class="m-link" data-bs-toggle="collapse" data-bs-target="#emp-Components" href="Employee.cshtml">
+                        <a class="m-link" href="/issue/Employee">
                             <i class="icofont-users-alt-5"></i> <span>Employees</span> 
                             @*<span class="arrow icofont-dotted-down ms-auto text-end fs-5" style="color: #3D4756; "></span>*@
                         </a>
@@ -98,7 +98,7 @@
                     </li>
 
                     <li class="collapsed" style="margin-top: 5rem;">
-                        <a class="m-link" data-bs-toggle="collapse" data-bs-target="#menu-Componentsone" href="#">
+                        <a class="m-link" href="/user/login">
                             <i class="icofont-logout"></i> <span>Log out</span> 
                             @*<span class="arrow icofont-dotted-down ms-auto text-end fs-5"></span>*@
                         </a>
