--- a/Jira.Web/Views/Shared/_Layout.cshtml
+++ b/Jira.Web/Views/Shared/_Layout.cshtml
@@ -17,9 +17,10 @@
         <!-- sidebar -->
         <div class="sidebar px-4 py-4 py-md-5 me-0">
             <div class="d-flex flex-column h-100">
-                <a href="index.html" class="mb-0 brand-icon">
+                <a href="index.html" class="mb-0 brand-icon" data-bs-toggle="collapse">
                     
-                        <img src="~/assets/images/atlassian_jira-ar21.svg" style="width:10rem;"/>
+                    <img src="~/assets/images/atlassian_jira_logo_icon_170511.png"style="width: 3rem; height: 3rem;"/>
+                    <span class="ms-2 fw-bold">Jira Software</span>
                     
                     @*<span class="logo-text">My-Task</span>*@
                 </a>
@@ -150,7 +151,7 @@
                 </ul>
 
                 <!-- Theme: Switch Theme -->
-                <ul class="list-unstyled mb-0">
+                @*<ul class="list-unstyled mb-0">
                     <li class="d-flex align-items-center justify-content-center">
                         <div class="form-check form-switch theme-switch">
                             <input class="form-check-input" type="checkbox" id="theme-switch">
@@ -163,7 +164,7 @@
                             <label class="form-check-label" for="theme-rtl">Enable RTL Mode!</label>
                         </div>
                     </li>
-                </ul>
+                </ul>*@
                 <!-- Menu: menu collepce btn -->
                 <button type="button" class="btn btn-link sidebar-mini-btn text-bluedark">
                     <span class="ms-2"><i class="icofont-bubble-right"></i></span>
