--- a/Jira.Web/Views/Shared/_Layout.cshtml
+++ b/Jira.Web/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                 <a href="index.html" class="mb-0 brand-icon" data-bs-toggle="collapse">
                     
                     <img src="~/assets/images/atlassian_jira_logo_icon_170511.png"style="width: 3rem; height: 3rem;"/>
-                    <span class="ms-2 fw-bold">Jira Software</span>
+                    <span class="ms-2 fw-bold">Jira Software.</span>
                     
                     @*<span class="logo-text">My-Task</span>*@
                 </a>
