--- a/Jira.Web/Views/Shared/_Layout.cshtml
+++ b/Jira.Web/Views/Shared/_Layout.cshtml
@@ -19,8 +19,8 @@
             <div class="d-flex flex-column h-100">
                 <a href="index.html" class="mb-0 brand-icon">
                     
-                        <img src="~/assets/images/atlassian_jira-ar21.svg" style="width:10rem;"/>
-                    
+                        <img src="~/assets/images/atlassian_jira_logo_icon_170511.png" style="width:3rem; height:3rem;"/>
+                        <span class="ms-1 fw-bold">Jira Software</span>                    
                     @*<span class="logo-text">My-Task</span>*@
                 </a>
                 <!-- Menu: main ul -->
@@ -150,7 +150,7 @@
                 </ul>
 
                 <!-- Theme: Switch Theme -->
-                <ul class="list-unstyled mb-0">
+                @*<ul class="list-unstyled mb-0">
                     <li class="d-flex align-items-center justify-content-center">
                         <div class="form-check form-switch theme-switch">
                             <input class="form-check-input" type="checkbox" id="theme-switch">
@@ -163,7 +163,7 @@
                             <label class="form-check-label" for="theme-rtl">Enable RTL Mode!</label>
                         </div>
                     </li>
-                </ul>
+                </ul>*@
                 <!-- Menu: menu collepce btn -->
                 <button type="button" class="btn btn-link sidebar-mini-btn text-bluedark">
                     <span class="ms-2"><i class="icofont-bubble-right"></i></span>
